@@ -3,6 +3,7 @@ Revision history for Perl extension App-Egaz
 {{$NEXT}}
 
     - Move `egaz plottree` to `plotr tree`
+    - Remove `egaz masked`, use `faops masked` instead
 
 0.2.5 2020-03-06T19:07:31Z
 
